works a bit better, not yet full
